[gd_scene load_steps=3 format=3 uid="uid://cvrc513ygajmv"]

[ext_resource type="Script" path="res://levelSelector.gd" id="1_dev1y"]
[ext_resource type="Texture2D" uid="uid://cu22jdbiuudvg" path="res://UI/levelchooser.png" id="2_sah7p"]

[node name="LevelSelector" type="Node2D"]
script = ExtResource("1_dev1y")

[node name="Node" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Node"]
scale = Vector2(0.601922, 0.601922)
texture = ExtResource("2_sah7p")
centered = false

[node name="Button1" type="Button" parent="Node"]
offset_left = 418.0
offset_top = 52.0
offset_right = 760.0
offset_bottom = 130.0
text = "Level 1"

[node name="Button2" type="Button" parent="Node"]
offset_left = 418.0
offset_top = 143.0
offset_right = 760.0
offset_bottom = 221.0
text = "Level 2"

[node name="Button3" type="Button" parent="Node"]
offset_left = 418.0
offset_top = 241.0
offset_right = 760.0
offset_bottom = 319.0
text = "Level 3"

[node name="Button4" type="Button" parent="Node"]
offset_left = 418.0
offset_top = 336.0
offset_right = 760.0
offset_bottom = 414.0
text = "Level 4"

[node name="Button5" type="Button" parent="Node"]
offset_left = 418.0
offset_top = 433.0
offset_right = 760.0
offset_bottom = 511.0
text = "Level 5"

[node name="back" type="Button" parent="Node"]
offset_left = 418.0
offset_top = 529.0
offset_right = 760.0
offset_bottom = 607.0
text = "Back"

[connection signal="pressed" from="Node/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Node/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Node/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Node/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Node/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Node/back" to="." method="_on_back_pressed"]
